    Bug #25614 After connection is closed, and opened again UTF-8 characters are not read well 
    Bug #25625 Crashes when calling with CommandType set to StoredProcedure 
    Bug #25651 SELECT does not work properly when WHERE contains UTF-8 characters 
    Bug #25726 MySqlConnection throws NullReferenceException and ArgumentNullException 
    Bug #25609 MySqlDataAdapter.FillSchema 

    Other changes
    -------------
    Turned MySqlPoolManager into a static class and added a static ctor to
         avoid any race conditions related to initializing the hashtable.
         (A similar suggestion came in from a user)
    Added 'Ignore Prepare' connection string option for disabling prepared
         statements application-wide    
    A nicer exception is displayed if you have added a parameter without the parameter marker.
    Improved CommandBuilder.DeriveParameters to use the procedure cache if possible
    Return parameters created with DeriveParameters now have the name RETURN_VALUE
    Fixed problem with parameter name hashing where the hashes were not getting updated
         or removed in certain situations.
    Fixed problem where pooled connections that are added back to the idle pool may be
         still in the closed state.
    
Version 1.0.8 RC

    Other changes
    -------------
    Implemented a stored procedure cache
    Changed how stored procedure metadata is retrieved to allow users without select privs
    on mysql.proc to use them
    Fixed shared memory connections
    Increased speed of MySqlParameterCollection.IndexOf(string) orders of magnitude
         (parameter name lookups are now strict on use of parameter marker)
    
    Bugs fixed or addressed
    -----------------------
    Bug #16659 Can't use double quotation marks(") as password access server by Connector/NET [fixed]
    Bug #17375 CommandBuilder ignores Unsigned flag at Parameter creation [fixed]
    Bug #17749 There is no char type in MySqlDbType [fixed]